fud2/tests/snapshots/tests__test@calyx_firrtl_verilog-refmem.snap
---
source: fud2/tests/tests.rs
description: "emit request: calyx -> verilog-refmem through firrtl"
---
build-tool = fud2
rule get-rsrc
  command = $build-tool get-rsrc $out

calyx-base = /test/calyx
calyx-exe = $calyx-base/target/debug/calyx
args = 
rule calyx
  command = $calyx-exe -l $calyx-base -b $backend $args $in > $out
rule calyx-pass
  command = $calyx-exe -l $calyx-base -p $pass $args $in > $out
flags = -p none
rule calyx-with-flags
  command = $calyx-exe -l $calyx-base $flags $args $in > $out

rule ref-to-external
  command = sed 's/ref /@external /g' $in > $out
rule external-to-ref
  command = sed 's/@external([0-9]*)/ref/g' $in | sed 's/@external/ref/g' > $out
gen-testbench-script = $calyx-base/tools/firrtl/generate-testbench.py
build memories.sv: get-rsrc
rule generate-refmem-testbench
  command = python3 $gen-testbench-script $in > $out
rule dummy
  command = sh -c 'cat $$0' $in > $out

firrtl-exe = /test/bin/firrtl
rule firrtl
  command = $firrtl-exe -i $in -o $out -X sverilog
build primitives-for-firrtl.sv: get-rsrc
rule add-verilog-primitives
  command = cat primitives-for-firrtl.sv $in > $out

build external.futil: ref-to-external stdin
build ref.futil: external-to-ref stdin
build memory-info.json: yxi external.futil
build tb.sv: generate-refmem-testbench memory-info.json
build tmp-out.fir: calyx ref.futil
  backend = firrtl
  args = --emit-primitive-extmodules
build stdin.fir: dummy tmp-out.fir tb.sv
build partial.sv: firrtl stdin.fir
build stdin.sv: add-verilog-primitives partial.sv | primitives-for-firrtl.sv

default stdin.sv
