fud2/tests/snapshots/tests__test@calyx_icarus_vcd.snap
---
source: fud2/tests/tests.rs
description: "emit request: calyx -> vcd through icarus"
---
build-tool = fud2
rule get-rsrc
  command = $build-tool get-rsrc $out

calyx-base = /test/calyx
calyx-exe = $calyx-base/target/debug/calyx
args = 
rule calyx
  command = $calyx-exe -l $calyx-base -b $backend $args $in > $out
rule calyx-pass
  command = $calyx-exe -l $calyx-base -p $pass $args $in > $out
flags = -p none
rule calyx-with-flags
  command = $calyx-exe -l $calyx-base $flags $args $in > $out

python = python3
build json-dat.py: get-rsrc
rule hex-data
  command = $python json-dat.py --from-json $in $out
rule json-data
  command = $python json-dat.py --to-json $out $in
sim_data = /test/data.json
datadir = sim_data
build $datadir: hex-data $sim_data | json-dat.py
rule sim-run
  command = ./$bin +DATA=$datadir +CYCLE_LIMIT=$cycle-limit $args > $out
cycle-limit = 500000000

build tb.sv: get-rsrc

iverilog = iverilog
rule icarus-compile-standalone-tb
  command = $iverilog -g2012 -o $out tb.sv $in
rule icarus-compile-custom-tb
  command = $iverilog -g2012 -o $out tb.sv memories.sv $in

build stdin.sv: calyx stdin
  backend = verilog
  args = --disable-verify
build stdin.exe: icarus-compile-standalone-tb stdin.sv | tb.sv
build sim.log stdin.vcd: sim-run stdin.exe $datadir
  bin = stdin.exe
  args = +NOTRACE=0 +OUT=stdin.vcd

default stdin.vcd
