fud2/tests/snapshots/tests__test@calyx_through_icarus_to_dat.snap
---
source: fud2/tests/tests.rs
description: "emit request: calyx -> dat through icarus"
---
build-tool = fud2
rule get-rsrc
  command = $build-tool get-rsrc $out

calyx-base = /test/calyx
calyx-exe = $calyx-base/target/debug/calyx
calyx-lib-path = $calyx-base
args = 
rule calyx
  command = $calyx-exe -l $calyx-lib-path -b $backend $args $in > $out
rule calyx-pass
  command = $calyx-exe -l $calyx-lib-path -p $pass $args $in > $out
cider-calyx-passes = -p none
rule calyx-cider
  command = $calyx-exe -l $calyx-lib-path $cider-calyx-passes $args $in > $out

auxin = $calyx-base/target/debug/auxin
rule hex-data
  command = $auxin $in --from json --to dat -o $out
rule json-data
  command = $auxin -e out $in --from dat --to json -o $out
build legacy_data.jq: get-rsrc
rule json-data-cleanup
  command = awk '/Simulated/ {print $$2}' $log | xargs jq -f legacy_data.jq $in --argjson cycles > $out
sim_data = /test/data.json
datadir = sim_data
build $datadir: hex-data $sim_data
rule sim-run
  command = ./$bin +DATA=$datadir +CYCLE_LIMIT=$cycle-limit $args > $out || (cat $out >&2 && false)
cycle-limit = 500000000

build tb.sv: get-rsrc

iverilog = iverilog
rule icarus-compile-standalone-tb
  command = $iverilog -g2012 -s toplevel -o $out tb.sv $in
rule icarus-compile-custom-tb
  command = $iverilog -g2012 -s toplevel -o $out tb.sv memories.sv $in

build verilog-noverify_1.sv: calyx calyx_0.futil
  backend = verilog
  args = --disable-verify $args
build sim_1.exe: icarus-compile-standalone-tb verilog-noverify_1.sv | tb.sv
build sim.log: sim-run sim_1.exe $datadir
  bin = sim_1.exe
  args = +NOTRACE=1
build im.json: json-data $datadir | sim.log
build dat_1.json: json-data-cleanup im.json | sim.log legacy_data.jq
  log = sim.log

default dat_1.json
